@@ -1,5 +1,5 @@
 # Versioning information related to our releases
 # is maintained here.
 #
-freedesktop-sdk-flatpak-branch: '19.08beta'
+freedesktop-sdk-flatpak-branch: '19.08'
 freedesktop-sdk-snap-branch: '1908'
