@@ -1,7 +1,7 @@
 {
     "app-id": "org.flatpak.Rust.Hello",
     "runtime": "org.freedesktop.Platform",
-    "runtime-version": "19.08beta",
+    "runtime-version": "19.08",
     "sdk": "org.freedesktop.Sdk",
     "sdk-extensions" : [
         "org.freedesktop.Sdk.Extension.rust-stable"
