@@ -1,7 +1,7 @@
 {
     "app-id": "org.gnu.hello",
     "runtime": "org.freedesktop.Platform",
-    "runtime-version": "19.08beta",
+    "runtime-version": "19.08",
     "sdk": "org.freedesktop.Sdk",
     "command": "hello",
     "modules": [
